# chess-mini-me

./: ChessAI.py  ChessEngine.py  ChessMain.py  HOW_IT_WORKS.md  README.md  engine.py  main.py  movefinder.py  pyproject.toml  requirements-dev.txt  requirements-mini-me.txt  requirements.txt  train_from_lichess.py
.github/workflows/: ci.yml
chess_mini_me/: __init__.py  cloner.py  constants.py  dialogs.py  encoding.py  engine.py  interface.py  lichess.py  move_finder.py  opponent.py  pgn.py  train_cli.py  training.py
tests/: __init__.py  conftest.py  test_cloner.py  test_dialogs.py  test_encoding.py  test_engine.py  test_lichess.py  test_move_finder.py  test_opponent.py  test_pgn.py  test_profiles.py  test_rules.py
