[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-mini-me"
version = "1.0.0"
description = "A small, readable chess engine and Pygame interface."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["pygame>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
chess-mini-me = "chess_mini_me.interface:run_game"

[tool.setuptools]
packages = ["chess_mini_me"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
